@@ -4,7 +4,7 @@ import java.util.*;
 
 public class Sample {  
   public static void main(String[] args) {
-    List<Integer> numbers = List.of(1, 2, 3, 4, 5, 6, 7, 8, 9, 10);
+    List<Integer> numbers = Arrays.asList(1, 2, 3, 4, 5, 6, 7, 8, 9, 10);
 
     //Print the double of event numbers
     
